# evo-core

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPING.md  GAPS.md  README.md  rustfmt.toml
crates/evo/: Cargo.toml  privileges.yaml
crates/evo-acceptance/: Cargo.toml  README.md
crates/evo-acceptance-distribution/: Cargo.toml
crates/evo-acceptance-distribution/src/: main.rs
crates/evo-acceptance-synthetic/: Cargo.toml
crates/evo-acceptance-synthetic/manifests/synthetic-appointment-past-due-plugin/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-appointment-periodic-plugin/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-appointment-plugin/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-appointment-wake-plugin/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-coalescing-source/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-composer/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-delivery-warden/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-drift-respondent/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-fast-path-warden/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-flight-rack-plugin/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-grammar-source/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-prompt-multistage-plugin/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-prompt-plugin/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-reload-plugin/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-reload-plugin-raised-cap/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-skew-plugin/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-skew-plugin-warn-band/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-warden/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-watch-cooldown-burst-plugin/: manifest.oop.toml
crates/evo-acceptance-synthetic/manifests/synthetic-watch-hysteresis-plugin/: manifest.oop.toml
crates/evo-acceptance-synthetic/src/: appointment_past_due_plugin.rs  appointment_periodic_plugin.rs  appointment_plugin.rs  appointment_wake_plugin.rs  drift_respondent.rs  fast_path_warden.rs  flight_rack_plugin.rs  lib.rs  prompt_multistage_plugin.rs  prompt_plugin.rs  reload_plugin.rs  skew_plugin.rs  synthetic_coalescing_source.rs  synthetic_composer.rs  synthetic_delivery_warden.rs  synthetic_grammar_source.rs  synthetic_warden.rs  watch_cooldown_burst_plugin.rs  watch_hysteresis_plugin.rs  watch_plugin.rs  watch_subject_state_plugin.rs
crates/evo-acceptance/src/: connection.rs  discrepancy.rs  error.rs  inspect_cmd.rs  inspector.rs  lib.rs  main.rs  plan.rs  report.rs  runner.rs  scenario.rs  target.rs
crates/evo-coalesce-labels/: Cargo.toml
crates/evo-coalesce-labels/src/: lib.rs
crates/evo-coalesce-labels/tests/: derive.rs
crates/evo-example-admin/: Cargo.toml  manifest.toml
crates/evo-example-admin/src/: lib.rs
crates/evo-example-admin/tests/: in_process.rs
crates/evo-example-distribution/: Cargo.toml  README.md
crates/evo-example-distribution/src/: main.rs
crates/evo-example-echo/: Cargo.toml  manifest.oop.toml  manifest.toml
crates/evo-example-echo/src/: lib.rs
crates/evo-example-echo/tests/: discovery.rs  from_directory.rs  out_of_process.rs
crates/evo-example-factory/: Cargo.toml  manifest.oop.toml  manifest.toml
crates/evo-example-factory/src/: lib.rs
crates/evo-example-warden/: Cargo.toml  manifest.toml
crates/evo-example-warden/src/: lib.rs
crates/evo-example-warden/tests/: from_directory.rs  out_of_process.rs
crates/evo-loom/: Cargo.toml
crates/evo-loom/src/: lib.rs
crates/evo-loom/tests/: loom_router.rs
crates/evo-os-clock/: Cargo.toml
crates/evo-os-clock/src/: adjtimex.rs  lib.rs
crates/evo-plugin-sdk/: Cargo.toml
crates/evo-plugin-sdk/schemas/: privileges.v1.json
crates/evo-plugin-sdk/src/: codec.rs  contract.rs  drift.rs  error.rs  error_taxonomy.rs  happenings.rs  host.rs  lib.rs  manifest.rs  testing.rs  wire.rs
crates/evo-plugin-sdk/src/contract/: mod.rs  (+8 more)
crates/evo-plugin-test/: Cargo.toml
crates/evo-plugin-test/src/: lib.rs
crates/evo-plugin-tool/: Cargo.toml
crates/evo-plugin-tool/src/: admin.rs  archive.rs  bundle.rs  catalogue_cmd.rs  exit_code.rs  install.rs  lint.rs  main.rs  pack_cmd.rs  paths.rs  privileges_cmd.rs  shelf_schema.rs  sign.rs  verify_cmd.rs
crates/evo-plugin-tool/tests/: cli_integration.rs  cli_smoke.rs.deleted
crates/evo-trust/: Cargo.toml
crates/evo-trust/src/: canonical.rs  digest.rs  error.rs  key_meta.rs  lib.rs  matchers.rs  release_root.rs  revocation.rs  trust_root.rs  verify.rs
crates/evo-trust/tests/: verify.rs
crates/evo/examples/: crash_writer.rs  subscribe_and_reconcile.rs
crates/evo/migrations/: 001_initial.sql  002_happenings.sql  003_meta.sql  004_pending_conflicts.sql  005_subjects_live_by_creation.sql  006_admin_log.sql  007_custody_ledger.sql  008_relation_graph.sql  009_installed_plugins.sql  010_reconciliation_state.sql  011_pending_grammar_orphans.sql  012_prompts.sql  013_appointments.sql
crates/evo/src/: admin.rs  admission.rs  appointments.rs  catalogue.rs  claimant.rs  cli.rs  client_acl.rs  coalescer.rs  config.rs  context.rs  custody.rs  error.rs  error_taxonomy.rs  factory.rs  fast_path.rs  grammar_migration.rs  happenings.rs  lib.rs  logging.rs  main.rs  manifest_drift.rs  persistence.rs  plugin_discovery.rs  plugin_trust.rs  projections.rs  prompts.rs  reconciliation.rs  relations.rs  resolution.rs  router.rs  server.rs  shutdown.rs  state.rs  subjects.rs  sync.rs  time_trust.rs  version_skew.rs  watches.rs  wire_client.rs
crates/evo/tests/: canonical_id_uniqueness.rs  catalogue_data_only.rs  concurrency.rs  crash_recovery.rs  end_to_end.rs  merge_split_claim_log.rs  router_proptest.rs
(+46 files in other folders)
