[workspace]
resolver = "2"
members = [
    "crates/evo",
    "crates/evo-example-echo",
    "crates/evo-example-warden",
    "crates/evo-plugin-sdk",
]

# Further crates will be added here as they are authored. Engineering-layer
# documents in docs/ remain the source of truth; every public type in a
# workspace crate has a corresponding citation in those documents.

[workspace.package]
version = "0.1.5"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/foonerd/evo-core"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
