[package]
name = "evo-coalesce-labels"
description = "#[derive(CoalesceLabels)] proc-macro for the evo framework's per-subscriber happenings coalescing surface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
trybuild = "1"
evo-plugin-sdk = { path = "../evo-plugin-sdk" }
serde_json = "1"

[lints]
workspace = true
