[package]
name = "evo-example-admin"
description = "Example singleton respondent plugin demonstrating the admin callbacks (SubjectAdmin + RelationAdmin)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
evo-plugin-sdk = { path = "../evo-plugin-sdk" }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
evo = { path = "../evo" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
semver = { version = "1", features = ["serde"] }

[lints]
workspace = true
