[package]
name = "evo-example-factory"
description = "Example factory respondent plugin: announces a small set of instances on load and echoes per-instance requests."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "factory-wire"
path = "src/bin/factory-wire.rs"

[dependencies]
evo-plugin-sdk = { path = "../evo-plugin-sdk" }
semver = { version = "1", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
    "signal",
] }
anyhow = "1"

[dev-dependencies]
evo = { path = "../evo" }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "process",
] }
tempfile = "3"

[lints]
workspace = true
