[package]
name = "evo-loom"
description = "Loom model-checking harness for the evo router's lookup-clone-drop discipline. Stand-alone crate so loom's `--cfg loom` flag does not perturb the rest of the workspace's dependency graph."
# Concrete values rather than `workspace = true`: this crate is
# intentionally NOT a member of the top-level workspace (see comment
# below), so workspace-inherited keys are not resolvable.
version = "0.1.8"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/foonerd/evo-core"
publish = false

# This crate is intentionally NOT a member of the top-level
# [workspace] in `Cargo.toml`. The reason: `RUSTFLAGS="--cfg loom"`
# is a global rustc flag, and tokio's own source has internal
# `cfg(loom)` gates that disable its real-I/O surface (`tokio::fs`,
# `tokio::process`). Building any crate that depends on tokio under
# `--cfg loom` therefore fails. Keeping `evo-loom` outside the
# workspace member list ensures `cargo test --workspace` does not
# touch this crate, and that the loom invocation here recompiles
# only this crate (plus loom's own dependencies), not the rest of
# the workspace.
#
# Run loom tests with:
#   RUSTFLAGS="--cfg loom" cargo test \
#       --manifest-path crates/evo-loom/Cargo.toml \
#       --test loom_router --release
#
# Loom tests are gated behind `--cfg loom` so they compile to nothing
# without the flag. Running them is intentionally a separate CI /
# nightly invocation, not part of the per-commit gate, because loom
# is exhaustive over thread interleavings and can take seconds to
# minutes per test.

[lib]
# Empty library: this crate exists only to host the integration
# tests under `tests/`. A bare `lib.rs` keeps cargo happy without
# committing to a public surface that would tempt non-test
# consumers.
path = "src/lib.rs"

[dependencies]
# Loom is a permutation-testing model checker for concurrent code.
# Cfg-gated as a dependency: without `--cfg loom`, the test target
# below skips compilation entirely (`#![cfg(loom)]`), so this dep
# is unused. With `--cfg loom`, loom replaces the std sync
# primitives this crate's test target uses.
loom = "0.7"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
# Register `--cfg loom` as a known build cfg. The `tests/loom_router.rs`
# integration test in this crate is gated behind `#![cfg(loom)]`;
# without this entry, rustc's unexpected-cfgs lint would flag the
# attribute as an unknown cfg.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[lints.clippy]
manual_async_fn = "allow"
