[package]
name = "evo-plugin-tool"
description = "CLI: lint, sign, verify, pack, install (PLUGIN_TOOL.md, GAPS [20])."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "evo-plugin-tool"
path = "src/main.rs"

[dependencies]
evo = { path = "../evo" }
evo-plugin-sdk = { path = "../evo-plugin-sdk" }
evo-trust = { path = "../evo-trust" }

ed25519-dalek = { version = "2.1", features = ["std", "pkcs8", "pem", "alloc"] }
clap = { version = "4", features = ["derive", "string"] }
anyhow = "1"
base64 = "0.22"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
tar = "0.4"
flate2 = "1"
# `static` forces lzma-sys to compile bundled liblzma with the target `CC_*`
# (see .github/scripts/ci-msrv-cargo-env.sh). Without it, pkg-config would use
# the host system lib, which breaks cross-compilation in CI.
xz2 = { version = "0.1", features = ["static"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
tempfile = "3"
walkdir = "2"
ureq = "2.9"
# Cross-platform PATH lookup for the `privileges check` host probes.
# Avoids fork+exec'ing `which`/`command -v` from the shell.
which = "6"
# Async runtime + Unix socket I/O for the `admin` subcommands
# that talk to the running steward over `/run/evo/evo.sock`. The
# rest of the tool is sync; the runtime is built per admin call
# rather than installed globally so the existing sync paths keep
# their straightforward exit-code shape.
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "macros"] }

[target.'cfg(unix)'.dependencies]
# `geteuid` for the install-as-root guard. Only the install path
# needs it, and only on Unix; the dependency is gated behind
# `cfg(unix)` so cross-builds for non-Unix targets do not pick it
# up. `rustix` exposes the syscall through a safe API, keeping the
# tool inside the workspace's `unsafe_code = "forbid"` gate.
rustix = { version = "0.38", default-features = false, features = ["process", "std"] }

[dev-dependencies]
# Integration tests generate deterministic ed25519 keys, write
# PKCS#8 PEM private keys the tool reads via --key, and build
# archives with custom top-level names to exercise the rename rule.
ed25519-dalek = { version = "2.1", features = ["std", "pkcs8", "pem", "alloc"] }
pkcs8 = { version = "0.10", features = ["pem"] }
tempfile = "3"
tar = "0.4"
flate2 = "1"

[lints]
workspace = true
