[package]
name = "evo-trust"
description = "Plugin signing digest, ed25519 verification, trust root and revocations (PLUGIN_PACKAGING.md section 5)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
evo-plugin-sdk = { path = "../evo-plugin-sdk" }
ed25519-dalek = { version = "2.1", features = ["std", "pkcs8", "pem", "alloc"] }
sha2 = "0.10"
blake3 = "1"
hex = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
subtle = { version = "2", default-features = false }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
pkcs8 = { version = "0.10", features = ["pem"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[lints]
workspace = true
