[package]
name = "evo"
description = "The evo steward. Administers a catalogue, admits plugins, emits projections."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "evo"
path = "src/main.rs"

# Consumer-facing worked example: connect, describe capabilities,
# snapshot via list_subjects, then subscribe with `since` set to the
# snapshot's `current_seq`. See examples/subscribe_and_reconcile.rs
# for the canonical reconciliation pattern documented in
# docs/engineering/CLIENT_API.md.
[[example]]
name = "subscribe_and_reconcile"
path = "examples/subscribe_and_reconcile.rs"

[dependencies]
evo-plugin-sdk = { path = "../evo-plugin-sdk" }
evo-trust = { path = "../evo-trust" }
evo-os-clock = { path = "../evo-os-clock" }
evo-coalesce-labels = { path = "../evo-coalesce-labels" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Calendar / wall-clock arithmetic for the appointments
# scheduler. `clock` enables `chrono::Local::now()` (libc
# localtime_r-backed); `serde` is unused by the scheduler today
# but matches the feature set evo-trust takes so the dep
# graph is consistent. Default features off keeps the
# transitive footprint small (no oldtime, no rkyv shims).
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

base64 = "0.22"
semver = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
# Lock-free Arc swap used by per-plugin entries to publish updated
# enforcement policies and manifests when reload-manifest swaps
# them. Reads on the dispatch path stay lock-free; writes happen
# only at admission and reload time.
arc-swap = "1.7"

# BLAKE3 powers claimant-token derivation. Pulled here (not via
# evo-trust) because the steward derives tokens for every admitted
# plugin; evo-trust's signing path uses sha2 for SPKI fingerprints
# and the two are deliberately separate crypto concerns.
blake3 = "1.5"

# Watch evaluator's `StatePredicate::Regex` arm compiles patterns
# from the SDK contract at evaluation time. The SDK already pulls
# regex for create-time validation; the steward pulls it
# independently so the runtime path doesn't depend on any private
# SDK internals.
regex = "1"

# Persistence: SQLite via the synchronous rusqlite API.
# `bundled` compiles SQLite from vendored C source so every target
# behaves identically regardless of host packaging; `blob` and
# `serde_json` enable BLOB/JSON column ergonomics the schema relies on.
rusqlite = { version = "0.31", features = ["bundled", "blob", "serde_json"] }
# Async wrapper around the synchronous rusqlite API. Each pool
# connection runs its blocking work on a dedicated thread; the steward
# `.await`s the join handle so multi-threaded tokio dispatch is not
# blocked.
deadpool-sqlite = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "0.3"

[dev-dependencies]
evo-example-echo = { path = "../evo-example-echo" }
tempfile = "3"
proptest = "1"

# Loom model-checking tests for the router's lookup-clone-drop
# discipline live in the stand-alone `crates/evo-loom` crate, NOT in
# this crate's `tests/` directory. The reason: `RUSTFLAGS="--cfg loom"`
# is a global rustc flag, and tokio's source has internal `cfg(loom)`
# gates that disable its real-I/O surface (`tokio::fs`,
# `tokio::process`) under loom. The evo library uses both, so the
# library cannot itself be built under `--cfg loom`. Hosting the loom
# tests in a separate non-workspace-member crate keeps the loom
# invocation scoped to that crate plus loom itself.
#
# Run loom tests with:
#   RUSTFLAGS="--cfg loom" cargo test \
#       --manifest-path crates/evo-loom/Cargo.toml \
#       --test loom_router --release

[lints]
workspace = true
